--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    font-family: "Clear Sans", "Helvetica Neue", Helvetica, sans-serif;
+    font-family: "Clear Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 18px;
     color: #333;
     font-weight: 300;
