--- a/layouts/partials/device.html
+++ b/layouts/partials/device.html
@@ -1,18 +1,36 @@
-<div class="device {{ .type }}">
-    <div class="back" {{ if eq .type "desktop" }}style="display: none;"{{ end }}></div>
-    <div class="body" {{ if eq .type "desktop" }}style="display: none;"{{ end }}></div>
-    <div class="body"></div>
-    <div class="front">
-        <div class="window-buttons">
-            <div></div>
-            <div></div>
-            <div></div>
+<div class="device-stage">
+    <div class="device-wrapper">
+        <div class="device phone">
+            <div class="back"></div>
+            <div class="body"></div>
+            <div class="body"></div>
+            <div class="front">
+                <div class="window-buttons">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="screen">
+                    <video playsinline muted preload src="/img/v2.1-unlock.mp4"></video>
+                    <video playsinline muted preload src="/img/v2.1-open-record.mp4" style="opacity: 0;"></video>
+                </div>
+            </div>
         </div>
-        <div class="screen">
-            <video playsinline muted autoplay></video>
-            <!-- {{ with .img }} -->
-            <!--     <img src="{{ . }}" style="display: none" onload="this.style.display='';"> -->
-            <!-- {{ end }} -->
+
+        <div class="device desktop">
+            <div class="back" style="display: none;"></div>
+            <div class="body" style="display: none;"></div>
+            <div class="body"></div>
+            <div class="front">
+                <div class="window-buttons">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="screen">
+                    <video playsinline muted preload src="/img/v2.1-sync-desktop.mp4"></video>
+                </div>
+            </div>
         </div>
     </div>
 </div>
