--- a/static/css/device.css
+++ b/static/css/device.css
@@ -1,3 +1,20 @@
+.device-stage {
+    position: absolute;
+    top: 0; left: 0; right: 0;
+    perspective: 2000px;
+    height: 500px;
+    transition: transform 1s, opacity 0.5s;
+    pointer-events: none;
+    overflow: hidden;
+}
+
+.device-wrapper {
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    transform-style: preserve-3d;
+    transition: transform 1s;
+}
+
 .device {
     width: 230px;
     height: 437px;
@@ -42,6 +59,7 @@
 }
 
 .screen {
+    position: relative;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -51,12 +69,13 @@
     border: solid 1px #aaa;
 }
 
-.screen > img, .screen > video {
-    width: 100%;
-}
-
-.device video {
+.screen > video {
     pointer-events: auto !important;
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;
+    top: 0;
+    transition: opacity 0.2s;
 }
 
 /* DESKTOP */
