Improve copy Tweak styling Add new animation for "transparency" section

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -134,6 +134,8 @@ header .logo {
 
 header .type {
     font-size: 110%;
+    position: relative;
+    top: -1px;
 }
 
 header [class^="icon-"], header [class*=" icon-"] {
