--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,7 +7,7 @@
 {{ define "js" }}
 <script>
 (function() {
-    var scroller, scrollerHeight, wrapper, stage, currSection, video1, video2, video3, sectionSize;
+    var scroller, scrollerHeight, wrapper, stage, currSection, video1, video2, video3, scanCode, sectionSize;
 
     var sections = [
         {
@@ -15,6 +15,7 @@
                 stage.classList.add("hero");
                 video1.style.opacity = "";
                 video2.style.opacity = "0";
+                scanCode.style.opacity = "0";
                 video1.play();
             },
             out: function() {
@@ -26,6 +27,7 @@
                 stage.classList.add("simple");
                 video2.style.opacity = "";
                 video1.style.opacity = "0";
+                scanCode.style.opacity = "0";
                 video2.play();
             },
             out: function() {
@@ -34,11 +36,22 @@
         },
         {
             in: function() {
-                stage.classList.add("cross-platform");
+                stage.classList.add("portable");
                 video3.play();
             },
             out: function() {
-                stage.classList.remove("cross-platform");
+                stage.classList.remove("portable");
+            }
+        },
+        {
+            in: function() {
+                stage.classList.add("transparent");
+                video2.style.opacity = "0";
+                video1.style.opacity = "0";
+                scanCode.style.opacity = "";
+            },
+            out: function() {
+                stage.classList.remove("transparent");
             }
         }
     ];
@@ -68,7 +81,8 @@
         video1 = wrapper.querySelectorAll(".device.phone video")[0];
         video2 = wrapper.querySelectorAll(".device.phone video")[1];
         video3 = wrapper.querySelector(".device.desktop video");
-        sectionSize = (scroller.scrollHeight - scrollerHeight) / (sections.length + 1);
+        scanCode = wrapper.querySelector(".device.phone .code");
+        sectionSize = (scroller.scrollHeight - scrollerHeight + 400) / (sections.length + 1);
 
         var lastScrollTop;
         setInterval(function() {
@@ -92,8 +106,8 @@
         <div class="inner">
             <h1>All your sensitive data in one secure place.</h1>
             <h2>
-                Padlock securely stores all of your passwords and other sensitive information for you
-                so all you have to remember is a single master password!
+                Padlock stores all of your passwords and other sensitive information for you
+                so all you have to remember is a single password!
             </h2>
             <div class="buttons">
                 {{ partial "download-button" }}
@@ -107,36 +121,39 @@
 
     <section class="simple">
         <div class="inner">
-            <h1>Beautifully Simple And Easy To Use.</h1>
+            <h1>Beautifully Simple.</h1>
             <h2>
-                We know it can be tedious to learn using new software, so we made sure that Padlock
-                is as easy to use as possible. Padlock focusses on the most essential features and
-                make these as easy to use as possible. No clutter, no distractions!
+                We know you have better things to do than to spend hours
+                learning how to use new software, so we made Padlock as simple
+                and easy to use as possible. While other apps boast about their
+                long list of shiny, cool features, we focus on security,
+                usability and performance instead. No clutter, no distractions!
             </h2>
         </div>
     </section>
 
-    <section class="cross-platform">
+    <section class="portable">
         <div class="inner">
-            <h1>Access Your Data Anywhere</h1>
+            <h1>Effortlessly Portable.</h1>
             <h2>
                 Padlock is available on all major platforms and synchronizing your devices
-                is effortless and fast. Padlock Cloud securely stores your data in the cloud
-                where you can easily access it from anywhere!
+                is fast and easy. <a href="https://cloud.padlock.io/">Padlock Cloud</a> securely
+                stores your data online where you have access to it from anywhere, any time!
             </h2>
         </div>
     </section>
 
-    <section class="open-source">
+    <section class="transparent">
         <div class="inner">
-            <h1>Padlock <span class="icon-heart"></span> Open Source</h1>
+            <h1>Completely Transparent.</h1>
             <h2>
-                We believe that transparency and openness is the best fundation for trust so
+                We believe that transparency and openness is the best foundation for trust so
                 we are building Padlock completely out in the open. Our source code is developed
                 under an open source licence so any one can review it, provide feedback and
                 even offer contrubitions at any time!
+                <!-- <a href="https://github.com/maklesoft/padlock/">Find Padlock on Github &#38;gt;&#38;gt;</a> -->
             </h2>
-            <div class="icon-github"></div>
+            <!-- <div class="section&#45;icon icon&#45;github"></div> -->
         </div>
     </section>
 
