--- a/static/css/device.css
+++ b/static/css/device.css
@@ -119,11 +119,39 @@
 
 /* TABLET */
 
-.device.tablet {
-    width: 700px;
-    height: 500px;
+@keyframes scan {
+    from { transform: translate3d(0, 50px, 0); }
+    to { transform: translate3d(0, 220px, 0); }
 }
 
-.device.tablet .front {
-    padding: 10px 30px 10px 30px;
+.code {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: url(/img/v2.1-locked.png) no-repeat;
+    background-size: cover;
+    transition: opacity 0.2s;
+}
+
+.code-scan {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100px;
+    border-top: solid 2px #ffffff;
+    border-bottom: solid 2px #ffffff;
+    overflow: hidden;
+    animation: scan 2s linear infinite alternate;
+}
+
+.code-scan > div {
+    position: absolute;
+    top: -400px;
+    width: 100%;
+    height: 450px;
+    background: url(/img/code.png) no-repeat;
+    background-size: 500px;
+    animation: scan 2s linear infinite alternate-reverse; 
 }
