--- a/static/css/home.css
+++ b/static/css/home.css
@@ -45,11 +45,11 @@ section {
 }
 
 section:nth-of-type(2n) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.05) 100%);
 }
 
 section:nth-of-type(2n+1) {
-    background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.05) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 section .inner {
@@ -81,7 +81,7 @@ section h2 {
     transform: translate3d(250px, -5px, 0) rotateY(-60deg) rotateX(20deg);
 }
 
-.device-stage:not(.hero):not(.simple):not(.cross-platform) {
+.device-stage:not(.hero):not(.simple):not(.portable):not(.transparent) {
     opacity: 0;
 }
 
@@ -95,6 +95,7 @@ section h2 {
 
 .device.desktop {
     transform: rotateY(180deg) translateY(-5000px);
+    transition: transform 0s linear 0.30s;
 }
 
 .device.desktop > div {
@@ -110,6 +111,7 @@ section.hero {
     height: 700px;
     background-color: #23b4ff;
     background: linear-gradient(180deg, #59c6ff 0%, #0274af 100%);
+    background: linear-gradient(180deg, #59c6ff 0%, #077cb9 100%);
     color: #fff;
     overflow: hidden;
     text-shadow: rgba(0, 0, 0, 0.2) 0 2px 0;
@@ -148,7 +150,7 @@ section.hero::before {
 
 .hero h1, .hero h2 {
     font-weight: 400;
-    width: 450px;
+    width: 460px;
 }
 
 .hero .description {
@@ -177,10 +179,6 @@ section.simple .inner {
     align-items: flex-end;
 }
 
-section.simple .inner > h1 {
-    width: 400px;
-}
-
 section.simple .inner > h2 {
     width: 500px;
 }
@@ -190,82 +188,83 @@ section.simple .inner > h2 {
 }
 
 .device-stage.simple .device-wrapper {
-    transform: translate3d(-250px, 30px, 0) rotateY(390deg) rotateX(20deg);
+    transform: translate3d(-250px, 50px, 0) rotateY(390deg) rotateX(20deg);
 }
 
 /* CROSS-PLATFORM SECTION */
 
-section.cross-platform .inner {
+section.portable .inner {
     text-align: left;
 }
 
-section.cross-platform .inner > h1 {
-    width: 300px;
-}
-
-section.cross-platform .inner > h2 {
+section.portable .inner > h2 {
     width: 400px;
 }
 
-.device-stage.cross-platform {
+.device-stage.portable {
     transform: translate3d(0, 1150px, 0);
 }
 
-.device-stage.cross-platform .device-wrapper {
+.device-stage.portable .device-wrapper {
     transform: translate3d(270px, 50px, 0) rotateY(150deg) rotateX(-20deg);
 }
 
-.device-stage.cross-platform .device.desktop {
+.device-stage.portable .device.desktop {
     transform: rotateY(180deg);
 }
 
-.device-stage.cross-platform .device > div {
+.device-stage.portable .device > div {
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
 
 /* OPEN-SOURCE SECTION */
 
-section.open-source .inner {
+section.transparent .inner {
     text-align: right;
     align-items: flex-end;
 }
 
-section.open-source .inner > h1 {
+section.transparent .inner > h2 {
     width: 500px;
 }
 
-section.open-source .inner > h2 {
-    width: 500px;
+.device-stage.transparent {
+    transform: translate3d(0, 1600px, 0);
 }
 
-section.open-source .icon-github {
-    display: block;
-    font-size: 250px;
-    position: absolute;
-    top: 15px;
-    left: 35px;
+.device-stage.transparent .device-wrapper {
+    transform: translate3d(-250px, 50px, 0) rotateY(390deg) rotateX(20deg);
 }
 
-@keyframes beat {
-    0% { transform: scale(0.9); }
-    5% { transform: scale(1.1); }
-    15% { transform: scale(0.9); }
-    100% { transform: scale(0.9); }
+.device-stage.transparent .device > div {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
-.icon-heart {
-    display: inline-block;
-    animation: beat 5s infinite both;
-}
 
-@media (max-width: 500px) {
-    .hero h1 {
-        font-size: 400%;
+@media (max-width: 840px) {
+    .device-stage, .section-icon {
+        display: none !important;
     }
 
-    .get-it .icon {
-        width: 50px;
-        height: 50px;
+    section:not(.hero) {
+        height: auto !important;
+    }
+
+    section .inner {
+        width: 100%;
+        padding: 0 20px;
+        box-sizing: border-box;
+        align-items: center !important;
+        text-align: center !important;
+    }
+
+    section .inner h1, section .inner h2 {
+        width: 100% !important;
+    }
+
+    h1 {
+        font-size: 220%;
     }
 }
