Add links to footer

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,3 +1,11 @@
 <footer>
     <a href="http://maklesoft.com" target="_blank" class="copyright maklesoft">&copy; 2016 MaKleSoft</a>
+    <nav>
+        <ul>
+            <li><a href="/about/">About</a></li>
+            <li><a href="/news/">News</a></li>
+            <li><a href="/howto/">Howto</a></li>
+            <li><a href="/downloads/">Downloads</a></li>
+        </ul>
+    </nav>
 </footer>
