--- a/static/css/base.css
+++ b/static/css/base.css
@@ -61,13 +61,14 @@ section {
 
 footer {
     display: block;
-    padding: 10px;
+    padding: 20px 10px;
     text-align: center;
     font-size: 80%;
     border-top: solid 1px #ccc;
 }
 
 footer .copyright {
+    float: right;
     color: #ccc;
 }
 
@@ -116,13 +117,13 @@ header .home, header .links, header nav, header nav ul {
     align-items: center;
 }
 
-header nav ul {
+nav ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
 
-header nav ul li {
+nav ul li {
     display: inline-block;
     margin-left: 10px;
 }
