Add iTunes meta tag

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -6,6 +6,7 @@
             <li><a href="/news/">News</a></li>
             <li><a href="/howto/">Howto</a></li>
             <li><a href="/downloads/">Downloads</a></li>
+            <li><a href="{{ .Param "githubUrl" }}">Source</a></li>
         </ul>
     </nav>
 </footer>
