--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -8,6 +8,7 @@
         {{ block "meta" . }}
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <meta name="apple-itunes-app" content="app-id=871710139">
         {{ end }}
 
         {{ block "favicon" . }}
