Add more hover effects for downloads section

--- a/static/css/device.css
+++ b/static/css/device.css
@@ -24,6 +24,7 @@
     width: 230px;
     height: 437px;
     transform-style: preserve-3d;
+    pointer-events: auto !important;
 }
 
 .device > div {
@@ -72,7 +73,6 @@
     border-radius: 6px;
     overflow: hidden;
     border: solid 1px #aaa;
-    pointer-events: auto !important;
 }
 
 .screen > video {
@@ -85,6 +85,7 @@
 
 .device .hidden {
     opacity: 0;
+    pointer-events: none;
 }
 
 /* DESKTOP */
@@ -174,11 +175,17 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    perspective: 1000px;
 
 }
 
 .downloads .download-button {
-    color: #fff !important;
+    color: #fff;
+    transition: transform 0.5s;
+}
+
+.downloads .download-button:hover {
+    transform: translateZ(10px);
 }
 
 .device .downloads .download-button .inner {
