--- a/static/css/home.css
+++ b/static/css/home.css
@@ -243,7 +243,7 @@ section.tryit {
 }
 
 section.tryit .inner > h2 {
-    width: 400px;
+    width: 370px;
 }
 
 .device-stage.tryit {
@@ -252,6 +252,10 @@ section.tryit .inner > h2 {
 
 .device-stage.tryit .device-wrapper {
     transform: translate3d(230px, 80px, 0) rotateY(150deg) rotateX(-20deg);
+}
+
+.device-stage.tryit .device-wrapper:hover {
+    transform: translate3d(230px, 80px, 0) rotateY(160deg) rotateX(-20deg);
 }
 
 .device-stage.tryit .device > div {
