Change "learn more about padlock cloud" link

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -51,7 +51,7 @@
                 time!
             </h2>
             <a href="/downloads/">&raquo; Download Padlock For Your Platform</a>
-            <a href="https://cloud.padlock.io/">&raquo; Learn More About Padlock Cloud</a>
+            <a href="/about/#what-is-padlock-cloud">&raquo; Learn More About Padlock Cloud</a>
         </div>
     </section>
 
