Hide device stage in case some required browser features are not supported

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -267,6 +267,9 @@ section.tryit .inner > h2 {
     transform: rotateY(180deg);
 }
 
+body.legacy .device-stage {
+    display: none !important;
+}
 
 @media (max-width: 840px) {
     .device-stage, .section-icon {
