--- a/layouts/index.html
+++ b/layouts/index.html
@@ -35,7 +35,7 @@
                 We know you have better things to do than to spend hours
                 learning how to use new software, so we made Padlock as simple
                 and easy to use as possible. While other apps boast about their
-                long list of shiny, cool features, we focus on security,
+                long list of shiny cool features, we focus on security,
                 usability and performance instead. No clutter, no distractions!
             </h2>
             <a href="/downloads/">Try It Now. It's Free! &raquo;</a>
