--- a/layouts/partials/download-links.html
+++ b/layouts/partials/download-links.html
@@ -31,7 +31,7 @@
             <div>macOS</div>
         </div>
     </a>
-    <a href="{{ $.Param "linuxUrl" }}" class="download-button get-app beta" data-platform="linux" target="_blank">
+    <a href="{{ $.Param "linuxUrl" }}" class="download-button get-app" data-platform="linux">
         <div class="inner">
             <div class="icon icon-linux"></div>
             <div>Linux</div>
