--- a/static/css/downloads.css
+++ b/static/css/downloads.css
@@ -12,14 +12,13 @@ section.downloads {
 
 .downloads .download-button {
     display: inline-block;
-    border-radius: 4px;
-    border: solid 2px;
     padding: 0;
-    margin: 0 0 10px 5px;
+    margin-bottom: 10px;
     position: relative;
     text-align: center;
     vertical-align: middle;
     font-size: 110%;
+    font-weight: bold;
 }
 
 .downloads .download-button .inner {
