More minor styling and wording tweaks

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,8 +19,9 @@
         <div class="inner">
             <h1>All your sensitive data in one secure place.</h1>
             <h2>
-                Padlock stores all of your passwords and other sensitive information for you
-                so all you have to remember is a single password!
+                Padlock stores all of your passwords and other sensitive
+                information for you so all you have to remember is a single
+                master password!
             </h2>
             <div class="buttons">
                 {{ partial "download-button" }}
